--- a/src/style/css.css
+++ b/src/style/css.css
@@ -413,8 +413,12 @@ a:hover{
 }
 
 .error {
-  color: red;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: .875em;
+  color: #dc3545;
 }
+
 /*Style for Applicants*/
 .applicant-table-btn{
   font-size: 0.75em !important; 
