--- a/src/style/css.css
+++ b/src/style/css.css
@@ -71,7 +71,7 @@ h2{
 
 .GTA-div label {
     max-width: 20% !important;
-    margin-top: 2.5%;
+    margin-top: 2%;
 }
 
 label.nolab {
@@ -605,8 +605,14 @@ a{
   .GTA-div{
 	width: 100%;
   }
-  .GTA-div label{
-	min-width: 15% !important;
+  .GTA-div label {
+    max-width: 30% !important;
+    margin-top: 8%;
+  }
+  label.nolab {
+    height: 78px !important;
+    line-height: 26px !important;
+    margin-top: auto !important;
   }
 }
 
@@ -645,7 +651,13 @@ a{
   .GTA-div{
 	width: 100%;
   }
-  .GTA-div label{
-	min-width: 15% !important;
+  .GTA-div label {
+    max-width: 30% !important;
+    margin-top: 8%;
+  }
+  label.nolab {
+    height: 78px !important;
+    line-height: 26px !important;
+    margin-top: auto !important;
   }
 }
