phone screen student form file input group

--- a/src/style/css.css
+++ b/src/style/css.css
@@ -586,6 +586,9 @@ a{
 	align-items: stretch !important;
 	justify-content: flex-start !important;
   }
+  .file-input-group{
+    max-width: 100%;
+  }
 }
 
 @media (max-width: 570px){
