--- a/src/style/css.css
+++ b/src/style/css.css
@@ -330,6 +330,7 @@ a#title:hover{
   color: #0066CC;
   background-color: #FFDD00;
   border-color: #FFDD00;
+  font-weight: bold;
 }
 
 .right-card-title{
