--- a/src/style/css.css
+++ b/src/style/css.css
@@ -530,7 +530,7 @@ a{
 
 .card-login{
   border: 5px solid white;
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  box-shadow: 0px 0px 50px 10px rgb(0 0 0 / 20%);
 }
 
 .btn-apply:hover{
