--- a/src/style/css.css
+++ b/src/style/css.css
@@ -271,7 +271,7 @@ a#title{
   
 .card-header{
   background-color: white;;
-  color: #0066cc;
+  color: #044C7C;
   border:none;
 }
 
@@ -280,7 +280,7 @@ a#title{
 }
 
 .card-body{
-  border-top: 2px solid #044c7c;
+  border-top: 0.5px solid #044c7c;
   color: #044c7c;
 }
 
