--- a/src/style/css.css
+++ b/src/style/css.css
@@ -662,3 +662,9 @@ a{
 	  justify-content: flex-start !important;
   }
 }
+
+@media(min-width: 1200px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl {
+    max-width: 80%;
+}
+}
