test phone screen

--- a/src/style/css.css
+++ b/src/style/css.css
@@ -661,10 +661,7 @@ a{
 	  align-items: stretch !important;
 	  justify-content: flex-start !important;
   }
-}
-
-@media(min-width: 1200px) {
-  .container, .container-lg, .container-md, .container-sm, .container-xl {
-    max-width: 80%;
-}
+  .filter-phone{
+    display: block;
+  }
 }
