--- a/src/style/css.css
+++ b/src/style/css.css
@@ -457,8 +457,9 @@ a#title:hover{
 
 /*APPLICANTS PAGE DESIGN*/
 .applicant-table-btn{
-  font-size: 16px !important; 
+  font-size: 14px !important; 
   font-family: Arial, Helvetica, sans-serif;
+  padding: 5px!important;
 }
 
 .applicant-table-btn option{
